# Lightly-GPT

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLICATION_CHECKLIST.md  README.md  __init__.py  app.py  check_openai_key.py  pyproject.toml  requirements.txt  setup.py  setup_publication.py
.github/workflows/: ci.yml
assets/: .keep
src/lightlygpt/: __init__.py  app.py  run.py
src/lightlygpt/tools/: __init__.py  analysis_tools.py  clip_tools.py  duplicate_tools.py  exif_tools.py  viz_tools.py
src/lightlygpt/utils/: __init__.py  clip_utils.py  config_utils.py  error_utils.py  image_utils.py  path_utils.py  session_utils.py  ui_utils.py
tests/: test_analysis_tools.py  test_clip_tools.py  test_error_utils.py  test_session_utils.py  test_ui_utils.py  test_utils.py
tools/: # Code Citations.md  __init__.py  analysis_tools.py  clip_tools.py  duplicate_tools.py  exif_tools.py  viz_tools.py
utils/: __init__.py  clip_utils.py  config_utils.py  error_utils.py  image_utils.py  path_utils.py  session_utils.py  ui_utils.py
